[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2"
lazy_static = "1.4"
hound = "3.0"
walkdir = "2.3"
log = "0.4"
simple_logger = "4.1.0"

[lib]
crate-type = ["cdylib"]